WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201707
Web Inspector: Crashes when intercept response continues with original content
https://bugs.webkit.org/show_bug.cgi?id=201707
Summary
Web Inspector: Crashes when intercept response continues with original content
Joseph Pecoraro
Reported
2019-09-11 19:27:10 PDT
Crashes when intercept response continues with original content Steps to Reproduce: 1. run-webkit-tests -g inspector/network/local-resource-override-continue-response.html => CRASH Notes: • didReceiveData that was deferred is no longer valid. Copy it when deferring avoids a crash.
Attachments
[PATCH] Proposed Fix
(1.92 KB, patch)
2019-09-11 19:28 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2019-09-11 19:27:36 PDT
<
rdar://problem/55261857
>
Joseph Pecoraro
Comment 2
2019-09-11 19:28:42 PDT
Created
attachment 378612
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 3
2019-09-11 19:30:01 PDT
Not sure if there is any efficient way to keep the data around, but I noticed this pattern in other places and it seems straightforward. For intercepts the inspector should always provide data anyways.
David Kilzer (:ddkilzer)
Comment 4
2019-09-12 03:14:41 PDT
Comment on
attachment 378612
[details]
[PATCH] Proposed Fix r=me
WebKit Commit Bot
Comment 5
2019-09-12 03:59:16 PDT
Comment on
attachment 378612
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 378612 Committed
r249805
: <
https://trac.webkit.org/changeset/249805
>
WebKit Commit Bot
Comment 6
2019-09-12 03:59:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug