Web Inspector: Crashes when intercept response continues with original content https://bugs.webkit.org/show_bug.cgi?id=201707 <rdar://problem/55261857>

Reviewed by David Kilzer.

* WebProcess/Network/WebResourceLoader.cpp:
(WebKit::WebResourceLoader::didReceiveData):
Copy the data for the callback since the deferral may run it much later.


Canonical link: https://commits.webkit.org/215361@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249805 268f45cc-cd09-0410-ab3c-d52691b4dbfc